--- a/Flash Chat iOS13/Views/MessageCell.xib
+++ b/Flash Chat iOS13/Views/MessageCell.xib
@@ -20,11 +20,18 @@
                     <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="9oz-eD-kvK">
                         <rect key="frame" x="10" y="10" width="295" height="76"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="YouAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="E04-qC-9p7">
+                                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Ros-rz-eMb"/>
+                                    <constraint firstAttribute="width" constant="40" id="ZLS-i1-e3P"/>
+                                </constraints>
+                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dkN-gY-m2v">
-                                <rect key="frame" x="0.0" y="0.0" width="235" height="72"/>
+                                <rect key="frame" x="60" y="0.0" width="175" height="72"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ikt-OI-6BB">
-                                        <rect key="frame" x="10" y="10" width="215" height="52"/>
+                                        <rect key="frame" x="10" y="10" width="155" height="52"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" name="BrandLightPurple"/>
                                         <nil key="highlightedColor"/>
@@ -58,6 +65,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="label" destination="Ikt-OI-6BB" id="1Za-Y8-hou"/>
+                <outlet property="leftImageView" destination="E04-qC-9p7" id="GKn-oT-lqY"/>
                 <outlet property="messageBubble" destination="dkN-gY-m2v" id="rs5-ZZ-FGC"/>
                 <outlet property="rightImageView" destination="j6E-NN-adF" id="Q8v-5h-Smo"/>
             </connections>
@@ -66,6 +74,7 @@
     </objects>
     <resources>
         <image name="MeAvatar" width="36" height="36"/>
+        <image name="YouAvatar" width="36" height="36"/>
         <namedColor name="BrandLightPurple">
             <color red="0.98000001907348633" green="0.9649999737739563" blue="0.99599999189376831" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
